Issue #13333: The UTF-7 decoder now accepts lone surrogates (the encoder already accepts them).